[package]
name = "quinn-networking"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
quinn = "0.7"
# rustls = { version = "0.19", features = ["dangerous_configuration", "quic"]}
tokio = { version = "1", features = ["macros"] }
rcgen = "0.8"
futures = "0.3"